--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
+# must be unique in a given SonarQube instance
 sonar.projectKey=team2-ssw567-triangle567
-sonar.sources=.
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+sonar.projectName=team2-ssw567-triangle567
+sonar.projectVersion=1.0
