--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectKey=team2-ssw567-triangle567
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=team2-ssw567-triangle567
 sonar.projectVersion=1.0
+sonar.branch=sonarcloud
